# QRIS

./: .gitignore  CMakeLists.txt  README.md
docs/architecture/: black_scholes_structure.md  module_structure.md  project_scope.md  qris_overview.md
docs/research/: black_scholes_theory.md
src/core/: CMakeLists.txt
src/core/instruments/: EuropeanOption.hpp
src/core/models/: BlackScholesModel.cpp  BlackScholesModel.hpp
src/core/utils/: normal_distribution.cpp  normal_distribution.hpp
src/tests/: CMakeLists.txt
src/tests/instruments/: test_european_option.cpp
src/tests/models/: test_black_scholes_model.cpp
src/tests/utils/: test_normal_distribution_gtest.cpp
